# virtuoso_ataraxia

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: ataraxia_kis_live_approval.example.yaml  tranquillo_kis_live_approval.example.yaml
configs/fragments/: ataraxia.yaml  tranquillo.yaml
src/ataraxia/: __init__.py  strategy.py
src/tranquillo/: __init__.py  strategy.py
tests/: test_strategy_contract.py
